refactor: unify config and retain monthly history